# maturin-game

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
